# Promo-sensai

./: README.md  ingest_to_vector_db.py  offers.json  pyproject.toml  rag_query.py  scraper.py  slackbot.py
